# doopdot

./: .gitignore  CMakeLists.txt  DoopDot.sln  Makefile  README.md  _Makefile  doopdot-gui.pro  makefile  moc_mainwindow.cpp  ui_mainwindow.h
src/: histogram.cpp  histogram.h  jpeg.cpp  jpeg.h  main.cpp  pgm.cpp  pgm.h  resize.cpp  resize.h  test.cpp  transform.cpp  transform.h
src/DoopDot/: DoopDot.vcxproj  settings.h
src/algorithms/: CMakeLists.txt  convolution.cpp  convolution.h  filter.cpp  filter.h  histogram.cpp  histogram.h  resize.cpp  resize.h  transform.cpp  transform.h
src/algorithms/include/: convolution.h  filter.h  histogram.h  resize.h  transform.h
src/common/: CMakeLists.txt  image.cpp  image.h  jpeg.cpp  pgm.cpp  types.h
src/common/include/: headers.h  image.h  jpeg.h  pgm.h
src/data/: out_equalize_contrast.ascii.pgm  out_rotate.ascci.pgm  output_convolution.ascii.pgm  output_convolution_rgb.ascii.ppm  output_negative.ascii.pgm  output_prewitt.ascii.pgm  output_prewitt_rgb.ascii.ppm  output_rotate90.ascii.pgm  output_shrink_bilerp.ascii.pgm  output_shrink_decimate.ascii.pgm  output_snail.ascii.ppm  output_sobel.ascii.pgm  output_sobel_rgb.ascii.ppm
src/formats/: jpeg.cpp  jpeg.h  pgm.cpp  pgm.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
